updated VacationPy for types and removed .head() for the initial display of hotel names column so could compare to make sure before data matched after get request.

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -302,7 +302,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "120ec61c18b549598ae797b0ccf12691",
+       "model_id": "f91a8bd8b7424dc8b0a904421fd06952",
        "version_major": 2,
        "version_minor": 0
       },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "543      RU  1595528454  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "7      RU  1595528454  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,182 +706,6 @@
     "* Hit the Google Places API for each city's coordinates.\n",
     "* Store the first Hotel result into the DataFrame.\n",
     "* Plot markers on top of the heatmap."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Hotel Name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>East London</td>\n",
-       "      <td>-33.02</td>\n",
-       "      <td>27.91</td>\n",
-       "      <td>65.80</td>\n",
-       "      <td>52</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9.37</td>\n",
-       "      <td>ZA</td>\n",
-       "      <td>1595528311</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lagoa</td>\n",
-       "      <td>39.05</td>\n",
-       "      <td>-27.98</td>\n",
-       "      <td>69.85</td>\n",
-       "      <td>69</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.73</td>\n",
-       "      <td>PT</td>\n",
-       "      <td>1595528396</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ayagoz</td>\n",
-       "      <td>47.97</td>\n",
-       "      <td>80.44</td>\n",
-       "      <td>65.55</td>\n",
-       "      <td>38</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6.98</td>\n",
-       "      <td>KZ</td>\n",
-       "      <td>1595528412</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Anapskaya</td>\n",
-       "      <td>44.89</td>\n",
-       "      <td>37.38</td>\n",
-       "      <td>68.00</td>\n",
-       "      <td>49</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8.95</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>1595528417</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Malanje</td>\n",
-       "      <td>-9.54</td>\n",
-       "      <td>16.34</td>\n",
-       "      <td>69.75</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.36</td>\n",
-       "      <td>AO</td>\n",
-       "      <td>1595528426</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          City    Lat    Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
-       "0  East London -33.02  27.91     65.80        52           0        9.37   \n",
-       "1        Lagoa  39.05 -27.98     69.85        69           0        2.73   \n",
-       "2       Ayagoz  47.97  80.44     65.55        38           0        6.98   \n",
-       "3    Anapskaya  44.89  37.38     68.00        49           0        8.95   \n",
-       "4      Malanje  -9.54  16.34     69.75        24           0        0.36   \n",
-       "\n",
-       "  Country        Date Hotel Name  \n",
-       "0      ZA  1595528311             \n",
-       "1      PT  1595528396             \n",
-       "2      KZ  1595528412             \n",
-       "3      RU  1595528417             \n",
-       "4      AO  1595528426             "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Add \"Hotel Name\" column to the DataFrame\n",
-    "hotel_df[\"Hotel Name\"]=\"\"\n",
-    "hotel_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create params\n",
-    "# create a for loop to iterate through each city\n",
-    "# then we want to grab hotel name by lat and lng from api\n",
-    "# store it back into dataframe \n",
-    "\n",
-    "# Params dictionary to update each iteration\n",
-    "params = {\n",
-    "            \n",
-    "            \"radius\":5000,\n",
-    "            \"types\":\"hotel\",\n",
-    "            \"key\":g_key\n",
-    "        \n",
-    "         }\n",
-    "# Use Lat and Long to identify the hotel names\n",
-    "for index, row in hotel_df.iterrows():\n",
-    "    lat = row[\"Lat\"]\n",
-    "    lng = row[\"Lng\"]\n",
-    "    \n",
-    "    # Change location each iteration while leaving original params in place\n",
-    "    params[\"location\"] = f\"{lat},{lng}\"\n",
-    "    \n",
-    "    # Base URL to use for request\n",
-    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
-    "    \n",
-    "    # Make the request\n",
-    "    hotel_name = requests.get(base_url, params=params).json()\n",
-    "    \n",
-    "     # Since some data may be missing we incorporate a try-except to skip any that are missing a data point.\n",
-    "    try:\n",
-    "        hotel_df.loc[index, \"Hotel Name\"] = hotel_name[\"results\"][3][\"name\"]\n",
-    "    \n",
-    "    except (KeyError, IndexError):\n",
-    "        print(\"Missing field/result...skipping.\")"
    ]
   },
   {
@@ -934,7 +758,7 @@
        "      <td>9.37</td>\n",
        "      <td>ZA</td>\n",
        "      <td>1595528311</td>\n",
-       "      <td>Premier Hotel Regent</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -947,7 +771,7 @@
        "      <td>2.73</td>\n",
        "      <td>PT</td>\n",
        "      <td>1595528396</td>\n",
-       "      <td>Ponta Do Carapacho</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -960,7 +784,7 @@
        "      <td>6.98</td>\n",
        "      <td>KZ</td>\n",
        "      <td>1595528412</td>\n",
-       "      <td>Көп салалы қазақ мектеп-гимназиясы</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -973,7 +797,7 @@
        "      <td>8.95</td>\n",
        "      <td>RU</td>\n",
        "      <td>1595528417</td>\n",
-       "      <td>Lotos</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -986,7 +810,7 @@
        "      <td>0.36</td>\n",
        "      <td>AO</td>\n",
        "      <td>1595528426</td>\n",
-       "      <td>Banco Millennium Atlântico</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -999,7 +823,7 @@
        "      <td>4.54</td>\n",
        "      <td>AU</td>\n",
        "      <td>1595528429</td>\n",
-       "      <td>Cattrall Park Motel Karratha</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1012,7 +836,7 @@
        "      <td>4.85</td>\n",
        "      <td>AO</td>\n",
        "      <td>1595528450</td>\n",
-       "      <td>Polo Universitário do Namibe</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1025,7 +849,7 @@
        "      <td>5.01</td>\n",
        "      <td>RU</td>\n",
        "      <td>1595528454</td>\n",
-       "      <td>Торговый Дом Красноармейский</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1042,18 +866,234 @@
        "6     Mossamedes -15.20   12.15     69.64        68           0        4.85   \n",
        "7  Krasnoarmeysk  51.02   45.70     70.00        29           0        5.01   \n",
        "\n",
-       "  Country        Date                          Hotel Name  \n",
-       "0      ZA  1595528311                Premier Hotel Regent  \n",
-       "1      PT  1595528396                  Ponta Do Carapacho  \n",
-       "2      KZ  1595528412  Көп салалы қазақ мектеп-гимназиясы  \n",
-       "3      RU  1595528417                               Lotos  \n",
-       "4      AO  1595528426          Banco Millennium Atlântico  \n",
-       "5      AU  1595528429        Cattrall Park Motel Karratha  \n",
-       "6      AO  1595528450        Polo Universitário do Namibe  \n",
-       "7      RU  1595528454        Торговый Дом Красноармейский  "
+       "  Country        Date Hotel Name  \n",
+       "0      ZA  1595528311             \n",
+       "1      PT  1595528396             \n",
+       "2      KZ  1595528412             \n",
+       "3      RU  1595528417             \n",
+       "4      AO  1595528426             \n",
+       "5      AU  1595528429             \n",
+       "6      AO  1595528450             \n",
+       "7      RU  1595528454             "
       ]
      },
      "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add \"Hotel Name\" column to the DataFrame\n",
+    "hotel_df[\"Hotel Name\"]=\"\"\n",
+    "hotel_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Params dictionary to update each iteration\n",
+    "params = {\n",
+    "            \n",
+    "            \"radius\":5000,\n",
+    "            \"types\":\"lodging\",\n",
+    "            \"key\":g_key\n",
+    "        \n",
+    "         }\n",
+    "# Use Lat and Long to identify the hotel names\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    lat = row[\"Lat\"]\n",
+    "    lng = row[\"Lng\"]\n",
+    "    \n",
+    "    # Change location each iteration while leaving original params in place\n",
+    "    params[\"location\"] = f\"{lat},{lng}\"\n",
+    "    \n",
+    "    # Base URL to use for request\n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "    \n",
+    "    # Make the request\n",
+    "    hotel_name = requests.get(base_url, params=params).json()\n",
+    "    \n",
+    "     # Since some data may be missing we incorporate a try-except to skip any that are missing a data point.\n",
+    "    try:\n",
+    "        hotel_df.loc[index, \"Hotel Name\"] = hotel_name[\"results\"][3][\"name\"]\n",
+    "    \n",
+    "    except (KeyError, IndexError):\n",
+    "        print(\"Missing field/result...skipping.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>East London</td>\n",
+       "      <td>-33.02</td>\n",
+       "      <td>27.91</td>\n",
+       "      <td>65.80</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.37</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1595528311</td>\n",
+       "      <td>Premier Hotels &amp; Resorts</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lagoa</td>\n",
+       "      <td>39.05</td>\n",
+       "      <td>-27.98</td>\n",
+       "      <td>69.85</td>\n",
+       "      <td>69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.73</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>1595528396</td>\n",
+       "      <td>Quinta do Fragoso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ayagoz</td>\n",
+       "      <td>47.97</td>\n",
+       "      <td>80.44</td>\n",
+       "      <td>65.55</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.98</td>\n",
+       "      <td>KZ</td>\n",
+       "      <td>1595528412</td>\n",
+       "      <td>Aygerim Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Anapskaya</td>\n",
+       "      <td>44.89</td>\n",
+       "      <td>37.38</td>\n",
+       "      <td>68.00</td>\n",
+       "      <td>49</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1595528417</td>\n",
+       "      <td>Irina guest house</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Malanje</td>\n",
+       "      <td>-9.54</td>\n",
+       "      <td>16.34</td>\n",
+       "      <td>69.75</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>AO</td>\n",
+       "      <td>1595528426</td>\n",
+       "      <td>Prédio de Agricultura</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Karratha</td>\n",
+       "      <td>-20.74</td>\n",
+       "      <td>116.85</td>\n",
+       "      <td>68.56</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.54</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1595528429</td>\n",
+       "      <td>Discovery Parks - Pilbara, Karratha</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Mossamedes</td>\n",
+       "      <td>-15.20</td>\n",
+       "      <td>12.15</td>\n",
+       "      <td>69.64</td>\n",
+       "      <td>68</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.85</td>\n",
+       "      <td>AO</td>\n",
+       "      <td>1595528450</td>\n",
+       "      <td>Hotel Katus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Krasnoarmeysk</td>\n",
+       "      <td>51.02</td>\n",
+       "      <td>45.70</td>\n",
+       "      <td>70.00</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.01</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1595528454</td>\n",
+       "      <td>Aleksandr Domnin</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            City    Lat     Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
+       "0    East London -33.02   27.91     65.80        52           0        9.37   \n",
+       "1          Lagoa  39.05  -27.98     69.85        69           0        2.73   \n",
+       "2         Ayagoz  47.97   80.44     65.55        38           0        6.98   \n",
+       "3      Anapskaya  44.89   37.38     68.00        49           0        8.95   \n",
+       "4        Malanje  -9.54   16.34     69.75        24           0        0.36   \n",
+       "5       Karratha -20.74  116.85     68.56        54           0        4.54   \n",
+       "6     Mossamedes -15.20   12.15     69.64        68           0        4.85   \n",
+       "7  Krasnoarmeysk  51.02   45.70     70.00        29           0        5.01   \n",
+       "\n",
+       "  Country        Date                           Hotel Name  \n",
+       "0      ZA  1595528311             Premier Hotels & Resorts  \n",
+       "1      PT  1595528396                    Quinta do Fragoso  \n",
+       "2      KZ  1595528412                        Aygerim Hotel  \n",
+       "3      RU  1595528417                    Irina guest house  \n",
+       "4      AO  1595528426                Prédio de Agricultura  \n",
+       "5      AU  1595528429  Discovery Parks - Pilbara, Karratha  \n",
+       "6      AO  1595528450                          Hotel Katus  \n",
+       "7      RU  1595528454                     Aleksandr Domnin  "
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,13 +1129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "120ec61c18b549598ae797b0ccf12691",
+       "model_id": "f91a8bd8b7424dc8b0a904421fd06952",
        "version_major": 2,
        "version_minor": 0
       },
